Usunięta modyfikacja IWorldMap