@@ -5,6 +5,7 @@ import org.junit.jupiter.api.Test;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -20,8 +21,11 @@ public class Lab4IntegrationTests {
         IWorldMap map = new RectangularMap(10, 5);
         Vector2d[] positions = { new Vector2d(2,2), new Vector2d(3,4) };
         IEngine engine = new SimulationEngine(directions, map, positions);
+        ArrayList<Animal> animals = new ArrayList<Animal>(Arrays.asList(
+                (Animal) map.objectAt(new Vector2d(2,2)),
+                (Animal) map.objectAt(new Vector2d(3, 4))
+        ));
         engine.run();
-        ArrayList<Animal> animals = map.getAnimals();
         for (int i = 0; i < animals.size(); i++) {
             assertEquals(outputPos.get(i), animals.get(i).getPosition());
             assertEquals(outputDir.get(i), animals.get(i).getDirection());
@@ -30,23 +34,30 @@ public class Lab4IntegrationTests {
     @Test
     void IntegrationTest2(){
         String[] input = {};
-        ArrayList<Vector2d> outputPos = new ArrayList<>(List.of(new Vector2d(2, 2)));
-        ArrayList<MapDirection> outputDir = new ArrayList<>(List.of(MapDirection.NORTH));
+        ArrayList<Vector2d> outputPos = new ArrayList<>(Arrays.asList(
+                new Vector2d(2, 2),
+                new Vector2d(2,1)
+        ));
+        ArrayList<MapDirection> outputDir = new ArrayList<>(Arrays.asList(
+                MapDirection.NORTH,
+                MapDirection.NORTH
+        ));
         ArrayList<MoveDirection> directions = testParser.parse(input);
         IWorldMap map = new RectangularMap(10, 5);
-        Vector2d[] positions = { new Vector2d(2,2), new Vector2d(2,2)};
+        Vector2d[] positions = { new Vector2d(2,2), new Vector2d(2,1)};
         IEngine engine = new SimulationEngine(directions, map, positions);
+        ArrayList<Animal> animals = new ArrayList<Animal>(Arrays.asList(
+                (Animal) map.objectAt(new Vector2d(2,2)),
+                (Animal) map.objectAt(new Vector2d(2,1))
+        ));
         engine.run();
-        ArrayList<Animal> animals = map.getAnimals();
-//        Upewnij się że nie dodano nielegalnego zwierzaka
-        assertEquals(1, animals.size());
 //        Czy pusta tablica ruchów nie psuje programu?
         for (int i = 0; i < animals.size(); i++) {
             assertEquals(outputPos.get(i), animals.get(i).getPosition());
             assertEquals(outputDir.get(i), animals.get(i).getDirection());
         }
     }
-//    Test z kolizją zwierzaków
+    //    Test z kolizją zwierzaków
     @Test
     void IntegrationTest3(){
         String[] input = {"f", "f", "r", "r" ,"f", "f", "f", "f", "r", "r", "r", "f","r","f","r"};
@@ -56,8 +67,12 @@ public class Lab4IntegrationTests {
         IWorldMap map = new RectangularMap(10, 5);
         Vector2d[] positions = { new Vector2d(0,1),  new Vector2d(0,2)};
         IEngine engine = new SimulationEngine(directions, map, positions);
+        ArrayList<Animal> animals = new ArrayList<Animal>(Arrays.asList(
+                (Animal) map.objectAt(new Vector2d(0,1)),
+                (Animal) map.objectAt(new Vector2d(0, 2))
+        ));
         engine.run();
-        ArrayList<Animal> animals = map.getAnimals();
+
         for (int i = 0; i < animals.size(); i++) {
             assertEquals(outputPos.get(i), animals.get(i).getPosition());
             assertEquals(outputDir.get(i), animals.get(i).getDirection());
